norm/parser/normParser.py
# Generated from /home/ax/Workspace/norm/norm.parser/norm.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class normParser ( Parser ):

    grammarFileName = "norm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "'->'", "<INVALID>", "'~'", "'='", "'?'", 
                     "':'", "'::'", "','", "'.'", "<INVALID>", "<INVALID>", 
                     "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "<INVALID>", 
                     "<INVALID>", "'-'", "'+'", "'*'", "'/'", "'**'", "'%'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "':='", "'|='", "'&='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'{sql'", "'sql}'" ]

    symbolicNames = [ "<INVALID>", "EXIST", "NEXIST", "FORANY", "WITH", 
                      "IMPORT", "EXPORT", "TO", "FROM", "AS", "SINGLELINE", 
                      "MULTILINE", "RETURN", "ATOMIC", "BINARY", "UNARY", 
                      "EMPTYLINES", "WS", "LBR", "RBR", "LSBR", "RSBR", 
                      "LCBR", "RCBR", "MAPTO", "NONE", "DRAW", "IS", "QUERY", 
                      "COLON", "SUBT", "COMMA", "DOT", "IN", "NI", "EQ", 
                      "NE", "GE", "LE", "GT", "LT", "LK", "NK", "MINUS", 
                      "PLUS", "TIMES", "DIVIDE", "EXP", "MOD", "NOT", "IGN", 
                      "AND", "OR", "XOR", "IMP", "EPT", "OTW", "DEF", "ORDEF", 
                      "ANDDEF", "NAME", "UNICODE_NAME", "BOOLEAN", "INTEGER", 
                      "FLOAT", "STRING", "RAW", "FORMATTED", "FORMATTEDRAW", 
                      "DATETIME", "UUID", "CODE_BLOCK_BEGIN", "CODE_BLOCK_END", 
                      "SQL_BEGIN", "SQL_END", "PYTHON_BEGIN", "PYTHON_END" ]

    RULE_script = 0
    RULE_full_statement = 1
    RULE_comments = 2
    RULE_statement = 3
    RULE_validName = 4
    RULE_qualifiedName = 5
    RULE_type_ = 6
    RULE_variable = 7
    RULE_names = 8
    RULE_typeImport = 9
    RULE_typeImports = 10
    RULE_typeExport = 11
    RULE_typeExports = 12
    RULE_variableDeclaration = 13
    RULE_inputDeclaration = 14
    RULE_outputDeclaration = 15
    RULE_typeDeclaration = 16
    RULE_typeDeclarations = 17
    RULE_typeDefinition = 18
    RULE_argumentExpr = 19
    RULE_argumentExprs = 20
    RULE_queryExpr = 21
    RULE_rangeExpr = 22
    RULE_evaluationExpr = 23
    RULE_arithmeticExpr = 24
    RULE_simpleExpr = 25
    RULE_codeExpr = 26
    RULE_returnExpr = 27
    RULE_compoundExpr = 28
    RULE_constant = 29
    RULE_measurement = 30
    RULE_scalar = 31
    RULE_string = 32
    RULE_definitionOperator = 33
    RULE_singleLogicOperator = 34
    RULE_simpleLogicalOperator = 35
    RULE_complexLogicalOperator = 36
    RULE_comparisonOperator = 37
    RULE_quantifier = 38

    ruleNames =  [ "script", "full_statement", "comments", "statement", 
                   "validName", "qualifiedName", "type_", "variable", "names", 
                   "typeImport", "typeImports", "typeExport", "typeExports", 
                   "variableDeclaration", "inputDeclaration", "outputDeclaration", 
                   "typeDeclaration", "typeDeclarations", "typeDefinition", 
                   "argumentExpr", "argumentExprs", "queryExpr", "rangeExpr", 
                   "evaluationExpr", "arithmeticExpr", "simpleExpr", "codeExpr", 
                   "returnExpr", "compoundExpr", "constant", "measurement", 
                   "scalar", "string", "definitionOperator", "singleLogicOperator", 
                   "simpleLogicalOperator", "complexLogicalOperator", "comparisonOperator", 
                   "quantifier" ]

    EOF = Token.EOF
    EXIST=1
    NEXIST=2
    FORANY=3
    WITH=4
    IMPORT=5
    EXPORT=6
    TO=7
    FROM=8
    AS=9
    SINGLELINE=10
    MULTILINE=11
    RETURN=12
    ATOMIC=13
    BINARY=14
    UNARY=15
    EMPTYLINES=16
    WS=17
    LBR=18
    RBR=19
    LSBR=20
    RSBR=21
    LCBR=22
    RCBR=23
    MAPTO=24
    NONE=25
    DRAW=26
    IS=27
    QUERY=28
    COLON=29
    SUBT=30
    COMMA=31
    DOT=32
    IN=33
    NI=34
    EQ=35
    NE=36
    GE=37
    LE=38
    GT=39
    LT=40
    LK=41
    NK=42
    MINUS=43
    PLUS=44
    TIMES=45
    DIVIDE=46
    EXP=47
    MOD=48
    NOT=49
    IGN=50
    AND=51
    OR=52
    XOR=53
    IMP=54
    EPT=55
    OTW=56
    DEF=57
    ORDEF=58
    ANDDEF=59
    NAME=60
    UNICODE_NAME=61
    BOOLEAN=62
    INTEGER=63
    FLOAT=64
    STRING=65
    RAW=66
    FORMATTED=67
    FORMATTEDRAW=68
    DATETIME=69
    UUID=70
    CODE_BLOCK_BEGIN=71
    CODE_BLOCK_END=72
    SQL_BEGIN=73
    SQL_END=74
    PYTHON_BEGIN=75
    PYTHON_END=76

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def full_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(normParser.Full_statementContext)
            else:
                return self.getTypedRuleContext(normParser.Full_statementContext,i)


        def EMPTYLINES(self, i:int=None):
            if i is None:
                return self.getTokens(normParser.EMPTYLINES)
            else:
                return self.getToken(normParser.EMPTYLINES, i)

        def getRuleIndex(self):
            return normParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)




    def script(self):

        localctx = normParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.full_statement()
            self.state = 83
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 79
                    self.match(normParser.EMPTYLINES)
                    self.state = 80
                    self.full_statement() 
                self.state = 85
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==normParser.EMPTYLINES:
                self.state = 86
                self.match(normParser.EMPTYLINES)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Full_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comments(self):
            return self.getTypedRuleContext(normParser.CommentsContext,0)


        def statement(self):
            return self.getTypedRuleContext(normParser.StatementContext,0)


        def getRuleIndex(self):
            return normParser.RULE_full_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFull_statement" ):
                listener.enterFull_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFull_statement" ):
                listener.exitFull_statement(self)




    def full_statement(self):

        localctx = normParser.Full_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_full_statement)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.comments()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.comments()
                self.state = 95
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINGLELINE(self, i:int=None):
            if i is None:
                return self.getTokens(normParser.SINGLELINE)
            else:
                return self.getToken(normParser.SINGLELINE, i)

        def MULTILINE(self):
            return self.getToken(normParser.MULTILINE, 0)

        def getRuleIndex(self):
            return normParser.RULE_comments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComments" ):
                listener.enterComments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComments" ):
                listener.exitComments(self)




    def comments(self):

        localctx = normParser.CommentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comments)
        self._la = 0 # Token type
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [normParser.SINGLELINE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 100 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 99
                    self.match(normParser.SINGLELINE)
                    self.state = 102 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==normParser.SINGLELINE):
                        break

                pass
            elif token in [normParser.MULTILINE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.match(normParser.MULTILINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeImports(self):
            return self.getTypedRuleContext(normParser.TypeImportsContext,0)


        def ATOMIC(self):
            return self.getToken(normParser.ATOMIC, 0)

        def typeExports(self):
            return self.getTypedRuleContext(normParser.TypeExportsContext,0)


        def typeDeclarations(self):
            return self.getTypedRuleContext(normParser.TypeDeclarationsContext,0)


        def typeDefinition(self):
            return self.getTypedRuleContext(normParser.TypeDefinitionContext,0)


        def compoundExpr(self):
            return self.getTypedRuleContext(normParser.CompoundExprContext,0)


        def getRuleIndex(self):
            return normParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = normParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.ATOMIC:
                    self.state = 107
                    self.match(normParser.ATOMIC)


                self.state = 110
                self.typeImports()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==normParser.ATOMIC:
                    self.state = 111
                    self.match(normParser.ATOMIC)


                self.state = 114
                self.typeExports()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 115
                    self.match(normParser.ATOMIC)


                self.state = 118
                self.typeDeclarations()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 120
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 119
                    self.match(normParser.ATOMIC)


                self.state = 122
                self.typeDefinition()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 123
                self.compoundExpr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValidNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(normParser.NAME, 0)

        def UNICODE_NAME(self):
            return self.getToken(normParser.UNICODE_NAME, 0)

        def ATOMIC(self):
            return self.getToken(normParser.ATOMIC, 0)

        def BINARY(self):
            return self.getToken(normParser.BINARY, 0)

        def UNARY(self):
            return self.getToken(normParser.UNARY, 0)

        def getRuleIndex(self):
            return normParser.RULE_validName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValidName" ):
                listener.enterValidName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValidName" ):
                listener.exitValidName(self)




    def validName(self):

        localctx = normParser.ValidNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_validName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << normParser.ATOMIC) | (1 << normParser.BINARY) | (1 << normParser.UNARY) | (1 << normParser.NAME) | (1 << normParser.UNICODE_NAME))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QualifiedNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def validName(self):
            return self.getTypedRuleContext(normParser.ValidNameContext,0)


        def STRING(self):
            return self.getToken(normParser.STRING, 0)

        def qualifiedName(self):
            return self.getTypedRuleContext(normParser.QualifiedNameContext,0)


        def DOT(self):
            return self.getToken(normParser.DOT, 0)

        def UUID(self):
            return self.getToken(normParser.UUID, 0)

        def getRuleIndex(self):
            return normParser.RULE_qualifiedName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualifiedName" ):
                listener.enterQualifiedName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualifiedName" ):
                listener.exitQualifiedName(self)



    def qualifiedName(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = normParser.QualifiedNameContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_qualifiedName, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [normParser.ATOMIC, normParser.BINARY, normParser.UNARY, normParser.NAME, normParser.UNICODE_NAME]:
                self.state = 129
                self.validName()
                pass
            elif token in [normParser.STRING]:
                self.state = 130
                self.match(normParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 143
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 141
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        localctx = normParser.QualifiedNameContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_qualifiedName)
                        self.state = 133
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 134
                        self.match(normParser.DOT)
                        self.state = 137
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [normParser.ATOMIC, normParser.BINARY, normParser.UNARY, normParser.NAME, normParser.UNICODE_NAME]:
                            self.state = 135
                            self.validName()
                            pass
                        elif token in [normParser.STRING]:
                            self.state = 136
                            self.match(normParser.STRING)
                            pass
                        else:
                            raise NoViableAltException(self)

                        pass

                    elif la_ == 2:
                        localctx = normParser.QualifiedNameContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_qualifiedName)
                        self.state = 139
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 140
                        self.match(normParser.UUID)
                        pass

             
                self.state = 145
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Type_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qualifiedName(self):
            return self.getTypedRuleContext(normParser.QualifiedNameContext,0)


        def LSBR(self):
            return self.getToken(normParser.LSBR, 0)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(normParser.Type_Context)
            else:
                return self.getTypedRuleContext(normParser.Type_Context,i)


        def RSBR(self):
            return self.getToken(normParser.RSBR, 0)

        def OR(self):
            return self.getToken(normParser.OR, 0)

        def getRuleIndex(self):
            return normParser.RULE_type_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_" ):
                listener.enterType_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_" ):
                listener.exitType_(self)



    def type_(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = normParser.Type_Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_type_, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [normParser.ATOMIC, normParser.BINARY, normParser.UNARY, normParser.NAME, normParser.UNICODE_NAME, normParser.STRING]:
                self.state = 147
                self.qualifiedName(0)
                pass
            elif token in [normParser.LSBR]:
                self.state = 148
                self.match(normParser.LSBR)
                self.state = 149
                self.type_(0)
                self.state = 150
                self.match(normParser.RSBR)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 159
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = normParser.Type_Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_type_)
                    self.state = 154
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 155
                    self.match(normParser.OR)
                    self.state = 156
                    self.type_(3) 
                self.state = 161
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def validName(self):
            return self.getTypedRuleContext(normParser.ValidNameContext,0)


        def FORMATTED(self):
            return self.getToken(normParser.FORMATTED, 0)

        def FORMATTEDRAW(self):
            return self.getToken(normParser.FORMATTEDRAW, 0)

        def getRuleIndex(self):
            return normParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)




    def variable(self):
